--- a/animation-services.html
+++ b/animation-services.html
@@ -519,8 +519,8 @@
                     <div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/custom-ar-development.webp" alt="Video Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">Explainer Video Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">Get your company's message out there uniquely with an animated explainer video. Our explainer videos are a means of transforming viewers into buyers. We create explainer videos to assist companies in telling their story in a way that is easy to remember and share. Our staff is prepared to make your pitch stand out, attract attention, and convey your message.</p>
+                            <h5 class="pt-3 text-white">Explainer Video Animation Services</h5>
+                            <p class="pt-2 text-white">Get your company's message out there uniquely with an animated explainer video. Our explainer videos are a means of transforming viewers into buyers. We create explainer videos to assist companies in telling their story in a way that is easy to remember and share. Our staff is prepared to make your pitch stand out, attract attention, and convey your message.</p>
                         </div>
                     </div>
                 </div>
@@ -528,8 +528,8 @@
                     <div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-experience-design.webp" alt="Logo Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">Logo Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">Reinvent your brand's identity with our logo animation services. Animated logos breathe new life into any brand, promoting it unexpectedly. With a team of professionals and cutting-edge tools, we blend innovative styles and bright colors and create scripts to create a wholly distinctive and animated brand identity for you.</p>
+                            <h5 class="pt-3 text-white">Logo Animation Services</h5>
+                            <p class="pt-2 text-white">Reinvent your brand's identity with our logo animation services. Animated logos breathe new life into any brand, promoting it unexpectedly. With a team of professionals and cutting-edge tools, we blend innovative styles and bright colors and create scripts to create a wholly distinctive and animated brand identity for you.</p>
                         </div>
                     </div>
                 </div>
@@ -537,8 +537,8 @@
                     <div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-games-development.webp" alt="3D Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">3D Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">Open your door to the next level of animation. We have a large staff of skilled 3D artists that can create spectacular graphics, videos, and renderings to help you sell, advertise, or promote new products. Our 3D animation services cover everything from product live-action advertising content to delivering scenes that bring life to your story.</p>
+                            <h5 class="pt-3 text-white">3D Animation Services</h5>
+                            <p class="pt-2 text-white">Open your door to the next level of animation. We have a large staff of skilled 3D artists that can create spectacular graphics, videos, and renderings to help you sell, advertise, or promote new products. Our 3D animation services cover everything from product live-action advertising content to delivering scenes that bring life to your story.</p>
                         </div>
                     </div>
                 </div>
@@ -546,8 +546,8 @@
                     <div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-app-development.webp" alt="2D Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">2D Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">Our professionals know what works when it comes to digital 2D content. Our 2D industry specialists are here to bring your digital creations to life. We have worked on 2D projects for small businesses and big organizations. Plus, we collaborate with you to guarantee that your 2D animated video fulfills your objectives and delivers the outcomes you expect.</p>
+                            <h5 class="pt-3 text-white">2D Animation Services</h5>
+                            <p class="pt-2 text-white">Our professionals know what works when it comes to digital 2D content. Our 2D industry specialists are here to bring your digital creations to life. We have worked on 2D projects for small businesses and big organizations. Plus, we collaborate with you to guarantee that your 2D animated video fulfills your objectives and delivers the outcomes you expect.</p>
                         </div>
                     </div>
                 </div>
@@ -555,8 +555,8 @@
                     <div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="Whiteboard Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">Whiteboard Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">Say goodbye to erasing and redrawing since we have discovered a workaround. Instead, we convert your concept into a whiteboard video that will leave your viewers wanting more with our whiteboard animation services. Our drawings, voice-overs, and motion graphics enable us to create concise and compelling whiteboard animations.</p>
+                            <h5 class="pt-3 text-white">Whiteboard Animation Services</h5>
+                            <p class="pt-2 text-white">Say goodbye to erasing and redrawing since we have discovered a workaround. Instead, we convert your concept into a whiteboard video that will leave your viewers wanting more with our whiteboard animation services. Our drawings, voice-overs, and motion graphics enable us to create concise and compelling whiteboard animations.</p>
                         </div>
                     </div>
                 </div>
@@ -564,8 +564,8 @@
                     <div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-integration-service.webp" alt="Character Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">Character Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">Whether you are a production company searching for a character animation service or seeking a freelancer to work with, we help you bring your narrative to life - whatever way you choose. We are a video animation company you can always rely on for high-quality character animation services that will add visual impact to your stories.</p>
+                            <h5 class="pt-3 text-white">Character Animation Services</h5>
+                            <p class="pt-2 text-white">Whether you are a production company searching for a character animation service or seeking a freelancer to work with, we help you bring your narrative to life - whatever way you choose. We are a video animation company you can always rely on for high-quality character animation services that will add visual impact to your stories.</p>
                         </div>
                     </div>
                 </div>
@@ -573,8 +573,8 @@
 					<div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="TV Commercial Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">TV Commercial Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">We offer full TV commercial animation services, from idea to completion. Our writers, animators, and designers are committed to creating effective, attention-grabbing advertising that boosts sales and maximizes ROI. Future Reality’s high-quality corporate TV commercial animation includes storyboards, logo design, TV commercials, and audio production.</p>
+                            <h5 class="pt-3 text-white">TV Commercial Animation Services</h5>
+                            <p class="pt-2 text-white">We offer full TV commercial animation services, from idea to completion. Our writers, animators, and designers are committed to creating effective, attention-grabbing advertising that boosts sales and maximizes ROI. Future Reality’s high-quality corporate TV commercial animation includes storyboards, logo design, TV commercials, and audio production.</p>
                         </div>
                     </div>
 				</div>
@@ -582,8 +582,8 @@
                     <div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="Product Animation Videos" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">Product Animation Videos</h5>
-                            <p class="pt-2 text-white metaverse-services-text">We assist businesses in developing excellent product animation videos that teach customers what the product does and how to utilize it. Our professionals collaborate with you to ensure that your definition is clearly presented in an engaging way that leaves the audience interested in your product and, most importantly, that they know how to purchase it.</p>
+                            <h5 class="pt-3 text-white">Product Animation Videos</h5>
+                            <p class="pt-2 text-white">We assist businesses in developing excellent product animation videos that teach customers what the product does and how to utilize it. Our professionals collaborate with you to ensure that your definition is clearly presented in an engaging way that leaves the audience interested in your product and, most importantly, that they know how to purchase it.</p>
                         </div>
                     </div>
                 </div>
@@ -591,8 +591,8 @@
 					<div class="card">
                         <div class="card-body custom-mr-service">
 							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="Feature Film Animation Services" class="metaverse-service-img">
-                            <h5 class="pt-3 text-white metaverse-services-heading">Feature Film Animation Services</h5>
-                            <p class="pt-2 text-white metaverse-services-text">We will develop your feature film with the same cutting-edge animation production technologies that have been used to create huge blockbuster films. Our team will convey your storyline with comprehensive animation production services, from plot concept to character design, environments, and cinematic quality.</p>
+                            <h5 class="pt-3 text-white">Feature Film Animation Services</h5>
+                            <p class="pt-2 text-white">We will develop your feature film with the same cutting-edge animation production technologies that have been used to create huge blockbuster films. Our team will convey your storyline with comprehensive animation production services, from plot concept to character design, environments, and cinematic quality.</p>
                         </div>
                     </div>
 				</div>
@@ -602,7 +602,7 @@
     <!-- End Services -->
 
     <!-- Start Benefits -->
-    <section class="metaverse-benefits-section py-3 py-md-3 py-lg-5">
+    <section class="animation-benefits-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center wow fadeInDown">
@@ -612,7 +612,7 @@
 				</div>
 			</div>
 			<div class="row mt-4">
-				<div class="col-md-6 wow fadeInLeft">
+				<div class="col-md-5 wow fadeInLeft">
 					<ul class="nav nav-tabs benefits-tab flex-column">
 						<li class="nav-item">
 						   <a class="nav-link active" data-bs-toggle="tab" href="#enhanced">Enhanced Brand Recognition</a>
@@ -631,7 +631,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="col-md-6 wow fadeInRight my-auto">
+				<div class="col-md-7 wow fadeInRight my-auto">
 					<div class="tab-content">
 						<div id="enhanced" class="container tab-pane active">
 							<h3 class="text-white pb-2">Enhanced Brand Recognition</h3>
@@ -653,6 +653,7 @@
 							<h3 class="text-white pb-2">Effective Brand Promotion</h3>
 							<p class="text-white">If you work with the right video animation company, you can develop an animation that will be noticed by your target audience and will spark their interest in your business. They employ vivid colors and other visual elements to attract people's attention and keep them watching the video for a long enough time.</p>
 						</div>
+					</div>
 				</div>
 			</div>
 		</div>
