--- a/augmented-reality-development.html
+++ b/augmented-reality-development.html
@@ -524,66 +524,54 @@
                 <div class="col-md-6 col-lg-4 wow fadeInLeft">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/custom-ar-development.webp" alt="Custom AR Development" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">Custom AR Development</h5>
-							</div>
-                            <p class="text-white ar-services-text">With a decade of serving businesses by flourishing AR technology in their operations, we masterly create any bespoke custom AR application to solve your dynamic problems.</p>
+							<img src="images/services/ar-development/custom-ar-development.webp" alt="Custom AR Development" class="ar-service-img">
+                            <h5 class="pt-3 text-white ar-services-heading">Custom AR Development</h5>
+                            <p class="text-white ar-services-text pt-2">With a decade of serving businesses by flourishing AR technology in their operations, we masterly create any bespoke custom AR application to solve your dynamic problems.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 pt-3 pt-sm-3 pt-md-0 pt-lg-0 wow fadeInDown">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-experience-design.webp" alt="AR Experience Design" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">AR Experience Design</h5>
-							</div>
-                            <p class="text-white ar-services-text">Create social, virtual, location-based, and any other experiences design with our stellar AR experience design services, enabling you to engage consumers more efficiently.</p>
+							<img src="images/services/ar-development/ar-experience-design.webp" alt="AR Experience Design" class="ar-service-img">
+                            <h5 class="pt-3 text-white ar-services-heading">AR Experience Design</h5>
+                            <p class="text-white ar-services-text pt-2">Create social, virtual, location-based, and any other experiences design with our stellar AR experience design services, enabling you to engage consumers more efficiently.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3 pt-sm-3 pt-md-3 pt-xl-0">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-games-development.webp" alt="AR Game Development" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">AR Game Development</h5>
-							</div>
-                            <p class="text-white ar-services-text">We design and create highly functional and feature-rich AR games to make your masterpiece an addictive game with alluring design and functionalities.</p>
+							<img src="images/services/ar-development/ar-games-development.webp" alt="AR Game Development" class="ar-service-img">
+                            <h5 class="pt-3 text-white ar-services-heading">AR Game Development</h5>
+                            <p class="text-white ar-services-text pt-2">We design and create highly functional and feature-rich AR games to make your masterpiece an addictive game with alluring design and functionalities.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInLeft pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-app-development.webp" alt="AR App Development" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">AR App Development</h5>
-							</div>
-                            <p class="text-white ar-services-text">To create real-world enriching user experiences, our augmented reality development team combines markers, tracking data, and SLAM inputs with a camera feed.</p>
+							<img src="images/services/ar-development/ar-app-development.webp" alt="AR App Development" class="ar-service-img">
+                            <h5 class="pt-3 text-white ar-services-heading">AR App Development</h5>
+                            <p class="text-white ar-services-text pt-2">To create real-world enriching user experiences, our augmented reality development team combines markers, tracking data, and SLAM inputs with a camera feed.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="AR Support And Maintenance" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">AR Support And Maintenance</h5>
-							</div>
-                            <p class="text-white ar-services-text">Your app's metadata and 3D model databases need updates and expansions over time. Our support teams ensure that you get the most out of your app with regular updates.</p>
+							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="AR Support And Maintenance" class="ar-service-img">
+                            <h5 class="ptb-3 text-white ar-services-heading">AR Support And Maintenance</h5>
+                            <p class="text-white ar-services-text pt-2">Your app's metadata and 3D model databases need updates and expansions over time. Our support teams ensure that you get the most out of your app with regular updates.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-integration-service.webp" alt="AR Integration Services" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">AR Integration Services</h5>
-							</div>
-                            <p class="text-white ar-services-text">Switch between platforms with ease, integrating them with your preferred applications. Our integration techniques enable quick 3D model retrieval and accurate processing.</p>
+							<img src="images/services/ar-development/ar-integration-service.webp" alt="AR Integration Services" class="ar-service-img">
+                            <h5 class="pt-3 text-white ar-services-heading">AR Integration Services</h5>
+                            <p class="text-white ar-services-text pt-2">Switch between platforms with ease, integrating them with your preferred applications. Our integration techniques enable quick 3D model retrieval and accurate processing.</p>
                         </div>
                     </div>
                 </div>
@@ -713,33 +701,27 @@
 						<li class="nav-item">
 							<a class="nav-link active" data-bs-toggle="tab" href="#project">
                                 <div class="ar-service-box">
-									<div class="custom-box">
-										<img src="images/services/ar-development/ar-projection-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
-										<h6 class="mb-0 ar-solution-name text-white">Project-based AR</h6>
-									</div>
-									<p class="text-white ar-solution-text">Our AR developers are skilled at creating projection-based augmented reality apps that display a virtual picture onto real-world surfaces. With these fascinating AR-based solutions, you can take your business to new heights.</p>
+									<img src="images/services/ar-development/ar-projection-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
+									<h6 class="pt-3 ar-solution-name text-white">Project-based AR</h6>
+									<p class="text-white ar-solution-text pt-2">Our AR developers are skilled at creating projection-based augmented reality apps that display a virtual picture onto real-world surfaces. With these fascinating AR-based solutions, you can take your business to new heights.</p>
                                 </div>
 							</a>
 						</li>
 						<li class="nav-item mt-3">
 							<a class="nav-link" data-bs-toggle="tab" href="#superimposition">
                                 <div class="ar-service-box">
-									<div class="custom-box">
-										<img src="images/services/ar-development/ar-superimposition-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
-										<h6 class="mb-0 ar-solution-name text-white">Superimposition based AR</h6>
-									</div>
-									<p class="text-white ar-solution-text">Superimposition-based augmented reality is critical in replacing the original vision with an enhanced one. In addition, our developers can assist you in connecting with clients and moving your organization forward.</p>
+									<img src="images/services/ar-development/ar-superimposition-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
+									<h6 class="pt-3 ar-solution-name text-white">Superimposition based AR</h6>
+									<p class="text-white ar-solution-text pt-2">Superimposition-based augmented reality is critical in replacing the original vision with an enhanced one. In addition, our developers can assist you in connecting with clients and moving your organization forward.</p>
                                 </div>
 							</a>
 						</li>
 						<li class="nav-item mt-3">
 							<a class="nav-link" data-bs-toggle="tab" href="#recognition">
                                 <div class="ar-service-box">
-									<div class="custom-box">
-										<img src="images/services/ar-development/ar-recognition-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
-										<h6 class="mb-0 ar-solution-name text-white">Recognition-based AR</h6>
-									</div>
-									<p class="text-white ar-solution-text">This sort of AR, also known as marker-based AR, relies on recognizing markers/user-defined pictures. Marker-based AR necessitates the use of a marker to trigger augmentation. We hold expertise in that too.</p>
+									<img src="images/services/ar-development/ar-recognition-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
+									<h6 class="pt-3 ar-solution-name text-white">Recognition-based AR</h6>
+									<p class="text-white ar-solution-text pt-2">This sort of AR, also known as marker-based AR, relies on recognizing markers/user-defined pictures. Marker-based AR necessitates the use of a marker to trigger augmentation. We hold expertise in that too.</p>
                                 </div>
 							</a>
 						</li>
@@ -773,33 +755,27 @@
 						<li class="nav-item">
 							<a class="nav-link" data-bs-toggle="tab" href="#location">
                                 <div class="ar-service-box">
-									<div class="custom-box">
-										<img src="images/services/ar-development/ar-location-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
-										<h6 class="mb-0 ar-solution-name text-white">Location-based AR</h6>
-									</div>
-									<p class="text-white ar-solution-text">Geo AR does not require a physical target to initiate an AR experience. Instead, the augmentations are associated with and visible in preset geolocations. Our AR experts are proficient in location-based AR.</p>
+									<img src="images/services/ar-development/ar-location-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
+									<h6 class="pt-3 ar-solution-name text-white">Location-based AR</h6>
+									<p class="text-white ar-solution-text pt-2">Geo AR does not require a physical target to initiate an AR experience. Instead, the augmentations are associated with and visible in preset geolocations. Our AR experts are proficient in location-based AR.</p>
                                 </div>
 							</a>
 						</li>
 						<li class="nav-item mt-3">
 							<a class="nav-link" data-bs-toggle="tab" href="#outlining">
                                 <div class="ar-service-box">
-									<div class="custom-box">
-										<img src="images/services/ar-development/ar-outlining-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
-										<h6 class="mb-0 ar-solution-name text-white">Outlining AR</h6>
-									</div>
-									<p class="text-white ar-solution-text">Outlining AR uses object recognition to have a deeper grasp of the present situation. With the help of our excellent AR professionals, you can use stunning AR technology in your business.</p>
+									<img src="images/services/ar-development/ar-outlining-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
+									<h6 class="pt-3 ar-solution-name text-white">Outlining AR</h6>
+									<p class="text-white ar-solution-text pt-2">Outlining AR uses object recognition to have a deeper grasp of the present situation. With the help of our excellent AR professionals, you can use stunning AR technology in your business.</p>
                                 </div>
 							</a>
 						</li>
 						<li class="nav-item mt-3">
 							<a class="nav-link" data-bs-toggle="tab" href="#markerless">
                                 <div class="ar-service-box">
-									<div class="custom-box">
-										<img src="images/services/ar-development/ar-markerless-marker-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
-										<h6 class="mb-0 ar-solution-name text-white">Markerless/Maker-based AR</h6>
-									</div>
-									<p class="text-white ar-solution-text">The most significant advantage of Augmented Reality is that it produces one-of-a-kind digital experiences that combine the finest of the digital and physical worlds. It also does not require any specific gear or software to enjoy the experience.</p>
+									<img src="images/services/ar-development/ar-markerless-marker-based-icon.webp" alt="AR Integration Services" class="ar-solution-img">
+									<h6 class="pt-3 ar-solution-name text-white">Markerless/Maker-based AR</h6>
+									<p class="text-white ar-solution-text pt-2">The most significant advantage of Augmented Reality is that it produces one-of-a-kind digital experiences that combine the finest of the digital and physical worlds. It also does not require any specific gear or software to enjoy the experience.</p>
                                 </div>
 							</a>
 						</li>
