--- a/extended-reality-development.html
+++ b/extended-reality-development.html
@@ -650,95 +650,61 @@
     <!-- End Features -->
 
     <!-- Start Benefits -->
-    <section class="game-benefits-section py-3 py-md-3 py-lg-5">
+    <section class="xr-benefits-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-8 text-center">
+				<div class="col-lg-8 text-center wow fadeInDown">
 					<span class="text-white">Benefits</span>
 					<h2 class="text-white mb10">Benefits Of XR For Your Business</h2>
 					<p class="text-white">Extended Reality (XR) opens the way to increased corporate value through widespread user engagement, amazing content, and improved staff performance.</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="ptag wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-0 mt-md-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">1</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Rich Customer Experience</h5>
-										<p class="description text-white">We can deliver your game to any platform—iOS, Android, PC, and Mac—via our in-house development staff and partners.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">2</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Collaboration and Communication Improvised</h5>
-										<p class="description text-white">XR technology allows teams to cooperate on projects even when not in the same city, much alone in the same room. Real-time virtual design technologies enable teams to collaborate on complicated visual data sets, when before such activities required more isolated cooperation.</p>
-										<p class="description text-white pt-2">This interconnectedness enhances productivity and quality control as the work streamlines communications between remote personnel.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">3</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">It enhances productivity</h5>
-										<p class="description text-white">Companies will undoubtedly become more productive as XR technology in business opens the door for better efficiency. According to a survey, 82 percent of firms who use XR say the advantages meet or surpass their original expectations.</p>
-										<p class="description text-white pt-2">Since extended reality is highly visual, it is simpler for us to assimilate information. Instead of studying via a small mobile screen, XR tools provide immersive, 3D experiences that allow for on-the-spot solutions and ongoing, dynamic learning at work.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<div class="row mt-4">
+				<div class="col-md-5 wow fadeInUp my-auto">
+					<ul class="nav nav-tabs benefits-tab flex-column">
+						<li class="nav-item">
+							<a class="nav-link active" data-bs-toggle="tab" href="#rich">Rich Customer Experience</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#collaboration">Collaboration and Communication Improvised</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#productivity">It Enhances Productivity</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#training">Training Ease</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#effective">Effective Brand Promotion</a>
+						</li>
+					</ul>
 				</div>
-				<div class="col-md-6">
-					<div class="ptag wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">4</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Training Ease</h5>
-										<p class="description text-white">In terms of learning, one of the most effective uses of XR technology in business is as a training tool. This is especially true for persons who operate in potentially hazardous conditions, such as those in the military or the oil and gas industry.</p>
-										<p class="description text-white pt-2">People may train in perilous settings without risk, thanks to immersive XR experiences. The United States Navy and Air Force, for example, employ XR technology to train fighter pilots. These technologies expedite new employee onboarding, and recruits may access learning sessions from various compatible devices.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">5</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Better Insights with Data Visualization</h5>
-										<p class="description text-white">In a data-driven world, businesses that embrace data will succeed. Data and XR technologies go hand in hand, adding visual interpretation to complex numbers.</p>
-										<p class="description text-white pt-2">Assume you are in charge of a nuclear power facility. Every week, you spend hours poring over spreadsheets and dashboard analytics. Imagine assessing the full effect of that data with a visual overview of the plant by just donning some augmented reality glasses. Where you formerly saw a high figure in your spreadsheet that was easily overlooked, you now see an unmistakable flashing red light in your XR tour of the facility.</p>
-										<p class="description text-white pt-2">These dynamic graphics and data insights, when combined, provide managers with all they need to make better, more educated decisions.</p>
-									</div>
-								</div>
-							</div>
+				<div class="col-md-7 wow fadeInUp">
+					<div class="tab-content">
+						<div id="rich" class="container tab-pane active">
+							<h3 class="text-white pb-2">Rich Customer Experience</h3>
+							<p class="text-white">We can deliver your game to any platform—iOS, Android, PC, and Mac—via our in-house development staff and partners.</p>
+						</div>
+						<div id="collaboration" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Collaboration and Communication Improvised</h3>
+							<p class="text-white">XR technology allows teams to cooperate on projects even when not in the same city, much alone in the same room. Real-time virtual design technologies enable teams to collaborate on complicated visual data sets, when before such activities required more isolated cooperation.</p>
+							<p class="text-white pt-2">This interconnectedness enhances productivity and quality control as the work streamlines communications between remote personnel.</p>
+						</div>
+						<div id="productivity" class="container tab-pane fade">
+							<h3 class="text-white pb-2">It Enhances Productivity</h3>
+							<p class="text-white">Companies will undoubtedly become more productive as XR technology in business opens the door for better efficiency. According to a survey, 82 percent of firms who use XR say the advantages meet or surpass their original expectations.</p>
+							<p class="text-white pt-2">Since extended reality is highly visual, it is simpler for us to assimilate information. Instead of studying via a small mobile screen, XR tools provide immersive, 3D experiences that allow for on-the-spot solutions and ongoing, dynamic learning at work.</p>
+						</div>
+						<div id="training" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Training Ease</h3>
+							<p class="text-white">In terms of learning, one of the most effective uses of XR technology in business is as a training tool. This is especially true for persons who operate in potentially hazardous conditions, such as those in the military or the oil and gas industry.</p>
+							<p class="text-white pt-2">People may train in perilous settings without risk, thanks to immersive XR experiences. The United States Navy and Air Force, for example, employ XR technology to train fighter pilots. These technologies expedite new employee onboarding, and recruits may access learning sessions from various compatible devices.</p>
+						</div>
+						<div id="effective" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Better Insights with Data Visualization</h3>
+							<p class="text-white">In a data-driven world, businesses that embrace data will succeed. Data and XR technologies go hand in hand, adding visual interpretation to complex numbers.</p>
+							<p class="text-white pt-2">Assume you are in charge of a nuclear power facility. Every week, you spend hours poring over spreadsheets and dashboard analytics. Imagine assessing the full effect of that data with a visual overview of the plant by just donning some augmented reality glasses. Where you formerly saw a high figure in your spreadsheet that was easily overlooked, you now see an unmistakable flashing red light in your XR tour of the facility.</p>
+							<p class="text-white pt-2">These dynamic graphics and data insights, when combined, provide managers with all they need to make better, more educated decisions.</p>
 						</div>
 					</div>
 				</div>
@@ -752,7 +718,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
-					<div class="common-heading wow fadeInLeft">
+					<div class="common-heading wow fadeInLeft text-center">
 						<h2>Extended Reality Equipment We Work On</h2>
 						<p class="pt-2">The skilled development team at Future Reality is ready to provide multi-platform solutions that serve a wide range of applications, from customer-centric activities to enterprise-grade goods.</p>
 					</div>
