--- a/game-development.html
+++ b/game-development.html
@@ -1289,7 +1289,7 @@
     <section class="game-benefits-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-8 text-center">
+				<div class="col-lg-8 text-center wow fadeInDown">
 					<span class="text-white">Benefits</span>
 					<h2 class="text-white mb10">Benefits of Our Mobile Game Development Services</h2>
 					<p class="text-white">Our game creation company has been assisting businesses with their ideas for over a decade. We create games that brands adore, that people like and share, and generate income. Our award-winning games have helped convert businesses of all kinds - large and small - into high-growth disruptors.</p>
@@ -1297,7 +1297,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<div class="ptag wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
+					<div class="ptag wow fadeInUp">
 						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-0 mt-md-4">
 							<div class="vertical-timeline-item vertical-timeline-element">
 								<div>
@@ -1351,7 +1351,7 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="ptag wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
+					<div class="ptag wow fadeInUp">
 						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
 							<div class="vertical-timeline-item vertical-timeline-element">
 								<div>
